--- a/code/CSScode/layout/04.html
+++ b/code/CSScode/layout/04.html
@@ -22,6 +22,7 @@
                     
                     内边距的设置会影响到盒子的大小
                     背景颜色会延伸到内边距上
+                    特殊情况， 如果这个盒子没有宽度，则 padding 不会撑开盒子
                 
                 一个盒子 的可见框的大小，有内容区、内边距和边框共同决定，所以在计算盒子大小时，需要将这三个区域加到一起计算
              */
