--- a/前端体系课/小慕医生/css/style.css
+++ b/前端体系课/小慕医生/css/style.css
@@ -80,6 +80,7 @@ header .header-top .tool .r2 {
     width: 264px;
     height: 28px;
     border: 1px solid rgba(202, 202, 202, .6);
+    border-radius: 4px;
 }
 
 header .header-top .tool .r2 input {
@@ -178,6 +179,7 @@ header .main-nav ul li:hover {
     width: 56px;
     height: 74px;
     background-color: rgba(0, 0, 0, .3);
+    border-radius: 6px;
 }
 
 .banner .center .right-btn {
@@ -219,6 +221,7 @@ header .main-nav ul li:hover {
     height: 12px;
     background-color: white;
     margin-right: 10px;
+    border-radius: 4px;
 }
 
 /* 最后一个没有margin */
@@ -229,4 +232,303 @@ header .main-nav ul li:hover {
 .banner ol li.cur {
     width: 30px;
     background-color: #00978e;
+}
+
+/* 内容部分 */
+.content {
+    padding-top: 71px;
+}
+.content h3{
+    border-left: 8px solid #00978e;
+    padding-left: 10px;
+    height: 20px;
+    line-height: 20px;
+}
+.content .useful-links {
+    width: 904px;
+    height: 151px;
+    margin: 0 auto;
+}
+
+.content .useful-links ul {
+    /* 清楚浮动 */
+    overflow: hidden;
+}
+
+.content .useful-links ul li {
+    float: left;
+    width: 104px;
+    margin-right: 56px;
+}
+
+.content .useful-links ul li:last-child {
+    margin-right: 0;
+}
+
+.content .useful-links ul li span {
+    display: block;
+    text-align: center;
+    color: #333;
+    font-size: 20px;
+    line-height: 40px;
+}
+
+.content .news-and-notice {
+    width: 1200px;
+    height: 376px;
+    margin: 0 auto;
+    margin-top: 56px;
+}
+
+.content .news-and-notice .news {
+    float: left;
+    width: 877px;
+    height: 376px;
+}
+
+.content .news-and-notice .notice {
+    float: left;
+    width: 323px;
+    height: 376px;
+}
+
+.content .news-and-notice .news h3 {
+    margin-bottom: 20px;
+}
+
+.content .news-and-notice .news .news-content .hot-news {
+    float: left;
+    width: 422px;
+    height: 328px;
+    margin-right: 20px;
+    position: relative;
+}
+
+.content .news-and-notice .news .news-content .hot-news .info {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 40px;
+    background-color: rgba(0, 0, 0, .3);
+    text-align: center;
+    color: white;
+    line-height: 40px;
+}
+
+.content .news-and-notice .news .news-content ul {
+    float: left;
+    width: 400px;
+    height: 328px;
+}
+
+.content .news-and-notice .news .news-content ul li {
+    line-height: 41px;
+}
+
+.content .news-and-notice .news .news-content ul li a {
+    float: left;
+    color: #666;
+}
+
+.content .news-and-notice .news .news-content ul li span {
+    float: right;
+}
+
+.content .news-and-notice .news .news-content ul li.spec a {
+    color: #00978e;
+    font-weight: bold;
+}
+
+.content .news-and-notice .notice h3 {
+    margin-bottom: 20px;
+}
+
+.content .news-and-notice .notice ol li {
+    overflow: hidden;
+    margin-bottom: 11px;
+}
+
+.content .news-and-notice .notice ol li .number {
+    float: left;
+    width: 53px;
+    height: 57px;
+    background-color: #00978e;
+    font-size: 30px;
+    color: white;
+    text-align: center;
+    line-height: 57px;
+    margin-right: 9px;
+}
+
+.content .news-and-notice .notice ol li dl dt a {
+    color: #666;
+}
+
+.content .news-and-notice .notice ol li dl dd a {
+    color: #999;
+}
+
+.content .ad-images {
+    width: 1200px;
+    margin: 20px auto;
+}
+
+.content .dep-info {
+    height: 400px;
+    background-color: #fafafa;
+}
+
+.content .dep-info .center {
+    position: relative;
+    width: 1200px;
+    margin: 0 auto;
+    overflow: hidden;
+    padding-top: 37px;
+}
+
+.content .dep-info .center .more {
+    position: absolute;
+    right: 0;
+    top: 37px;
+    color: #999;
+}
+
+.content .dep-info .center .col {
+    float: left;
+    width: 265px;
+    padding-left: 35px;
+}
+
+.content .dep-info .center .col h4 {
+    text-align: center;
+    margin-bottom: 18px;
+    margin-top: 20px;
+    position: relative;
+}
+
+.content .dep-info .center .col h4::before {
+    content: '';
+    position: absolute;
+    left: 61px;
+    top: 12px;
+    width: 40px;
+    height: 2px;
+    background-color: #00978e;
+}
+
+.content .dep-info .center .col h4::after {
+    content: '';
+    position: absolute;
+    left: 162px;
+    top: 12px;
+    width: 40px;
+    height: 2px;
+    background-color: #00978e;
+}
+
+.content .dep-info .center .col li {
+    float: left;
+    width: 119px;
+    height: 34px;
+    border: 1px solid #cdcdcd;
+    text-align: center;
+    line-height: 34px;
+    margin-right: 17px;
+    margin-bottom: 16px;
+    border-radius: 4px;
+}
+
+.content .dep-info .center .col li:nth-child(even) {
+    margin-right: 0;
+}
+
+.content .dep-info .center .col li a {
+    color: #333;
+}
+
+.content .dep-info .center .col li.spec a {
+    color: #00978e;
+    font-weight: bold;
+}
+
+.content .exp-info {
+    position: relative;
+    width: 1200px;
+    padding-top: 24px;
+    margin: 0 auto;
+}
+
+.content .exp-info .more {
+    position: absolute;
+    right: 0;
+    top: 37px;
+    color: #999;
+}
+
+.content .exp-info ul {
+    overflow: hidden;
+    padding-top: 20px;
+}
+
+.content .exp-info ul li {
+    float: left;
+    width: 400px;
+    height: 240px;
+}
+
+.content .exp-info ul li .picbox {
+    float: left;
+    width: 152px;
+}
+
+.content .exp-info ul li .picbox {
+    width: 152px;
+}
+
+.content .exp-info ul li .wordbox {
+    float: left;
+    width: 220px;
+    padding-left: 10px;
+    color: #333;
+    line-height: 27px;
+}
+/* 页脚 */
+footer{
+    height: 395px;
+    background-color: #fafafa;
+}
+footer .center{
+    width: 1200px;
+    margin: 0 auto;
+    padding-top: 26px;
+}
+footer .center h3{
+    font-size: 20px;
+    color: #333;
+}
+footer .center .friend-links ul{
+    overflow: hidden;
+    padding-top: 20px;
+}
+footer .center .friend-links ul li{
+    float: left;
+    padding: 0 50px;
+}
+footer .center .friend-links ul li a{
+    color: #333;
+    font-size: 16px;
+}
+footer .center address{
+    font-style: normal;
+    padding-top: 30px;
+}
+footer .center address ul{
+    width: 730px;
+    padding-top: 20px;
+}
+footer .center address ul li{
+    float: left;
+    width: 237px;
+    margin-bottom: 20px;
 }
