--- a/前端体系课/慕云游/css/base.css
+++ b/前端体系课/慕云游/css/base.css
@@ -101,7 +101,6 @@ body {
     width: 264px;
     height: 270px;
     background-image: linear-gradient(180deg, #34E3BC 0%, #15AF7A 98%);
-    padding-top: 46px;
     box-sizing: border-box;
 }
 
@@ -109,6 +108,13 @@ body {
     text-align: center;
     color: white;
     font-size: 15px;
+}
+
+.content-part .more-grid a {
+    box-sizing: border-box;
+    display: block;
+    padding-top: 46px;
+    height: 270px;
 }
 
 .content-part .more-grid .iconfont {
@@ -122,21 +128,57 @@ body {
     margin-left: -24px;
 }
 
+.content-part .more-grid:hover .iconfont {
+    animation: ud .4s ease 0s infinite alternate;
+}
+
+@keyframes ud {
+    form {
+        transform: translateY(-10px);
+    }
+
+    to {
+        transform: translateY(10px);
+    }
+}
+
 .content-part .more-grid ul {
     margin-top: 112px;
-    padding-left: 42px;
+    padding-left: 40px;
 }
 
 .content-part .more-grid ul li {
     float: left;
     border-right: 1px solid white;
     color: white;
-    padding: 6px;
-    height: 10px;
-    line-height: 10px;
-    font-size: 15px;
+    padding: 0 9px;
+    height: 14px;
+    line-height: 14px;
+    font-size: 14px;
 }
 
 .content-part .more-grid ul li:last-child {
     border-right: none;
+}
+
+/* 图片特效 */
+.content-part li {
+    overflow: hidden;
+}
+
+.content-part li .picbox {
+    height: 184px;
+    overflow: hidden;
+}
+
+.content-part .grid {
+    overflow: hidden;
+}
+
+.content-part img {
+    transition: transform .4s ease 0s;
+}
+
+.content-part img:hover {
+    transform: scale(1.1);
 }
