--- a/前端体系课/React/react-travel/src/App.module.css
+++ b/前端体系课/React/react-travel/src/App.module.css
@@ -3,7 +3,9 @@
 }
 
 .page-content{
-  width: 80%;
+  width: 1230px;
+  /* width: 65%; */
+  /* width: 80%; */
   margin-left: auto;
   margin-right: auto;
   min-height: 75vh;
